2005-12-28  Steve Frécinaux  <nudrema@gwash.com>

	* plugins/indent/gedit-indent-plugin.c: retrieve tab settings
	directly from GtkSourceView instead of using the prefs-manager.

2005-12-18  Michael Terry  <mterry@cvs.gnome.org>

	* .cvsignore:
	* Makefile.am:
	* configure.ac:

	Convert help system to gnome-doc-utils (bug #318486).
	Further changes documented in help/ChangeLog.

2005-12-15  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/gedit-spell-plugin.c: add ellipsis to the
	"Set Language" menu item, as per HIG. (bug #314964)

2005-12-14  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-ui.h:
	* gedit/gedit-widow-private.h:
	* gedit/gedit-widow.c:

	Move Quit and View menitems to separate groups so that they
	are sensitive even when there are no tabs. (bug #324078)

2005-12-12  Paolo Borelli  <pborelli@katamail.com>

	* all files: too many changes to list, this is the merge of
	the new_mdi cvs branch, featuring almost a rewrite of the whole
	gedit codebase.
	Here is an excerpt from Paolo Maggi's mail describing the merge
	to the developement list:

	The "new_mdi" branch has been used for a substantial rework of
	the gedit internals with the goal of fixing various longstanding
	issues and improving the quality of the whole codebase.

	The main issues we wanted to fix were the ones related to the
	way gedit handled its tabbed interface (see bug #131953), but
	then a lot of other improvements have been put in.

	In particular:
	- GtkUIManager is now used for menus and toolbar instead of
	  libbonoboui
	- A side panel and a bottom panel have been added
	- A new gobject-based plugin system has been implemented
	- Plugins can now be written in Python
	- Reading and writing of files are now handled in an
	  asynchronous way (so the user interface never blocks)
	- Local files are read using mmap (when possible)
	- Incremental search is supported (use Ctrl+K)
	- A lot of usability improvements with some new UI experiment
	  are featured