@@ -1,3 +1,8 @@
+2005-12-29  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit.c: make sure window is realized before setting the
+	startup timestamp.
+
 2005-12-28  Steve Frécinaux  <nudrema@gwash.com>
 
 	* plugins/indent/gedit-indent-plugin.c: retrieve tab settings
